test/fail/bad-class-import.mo
import C "lib/anon_class"; // bad actor class import

actor {
};
